my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENODEV/ENODEV.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENODEV.dml:7:2: error EDEVICE: missing device declaration
